# SubwaySim

./: README.md  main.py  pyproject.toml
src/: __init__.py
src/subwaysim/: __init__.py  sim.py
