[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subwaysim"
version = "0.0.0"
dependencies = ["geopandas>=0.14.1", "shapely", "networkx", "pandas", "numpy", "keplergl", "geopy"]
requires-python = ">=3.8"
authors = [
  { name="Kai Tang", email="794568794@qq.com" },
]
description = "A Python Package for Macroscopic simulation package for urban subway systems"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "LICENCE"}
keywords = ["simulation"]

[project.urls]
Homepage = "https://github.com/zdsjjtTLG/SubwaySim"